Argocd/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: l00187746/wednesday-adventures-backend:latest # backend image name
          ports:
            - containerPort: 5000
      nodeSelector:
         nodegroup-role: worker-staging

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: staging
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
