Argocd/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: l00187746/frontend:staging  # frontend image
          imagePullPolicy: Always  # Ensures Kubernetes always pulls the latest image
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf  # This will mount the specific file from the ConfigMap
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-conf  # ConfigMap name that contains nginx.conf
      nodeSelector:
         nodegroup-role: worker-staging



---
apiVersion: v1
kind: Service
metadata:
  name: frontend-staging
  namespace: staging
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30005  # You can change this to 80 if you're not exposing it externally
  type: NodePort
