Argocd/alb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: staging
  name: frontend-ingress-staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
    nginx.ingress.kubernetes.io/rewrite-target: /index.html
spec:
  rules:
    - host: staging.wednesdaysadventures.me
      http:
        paths:
          - path: /  # Root path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /login  # Login path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /homepage  # Homepage path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /userRegister  # User register path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /forgotPassword  # Forgot password path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /errorland  # Error land path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /cart  # Error land path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /about  # Error land path
            pathType: Prefix
            backend:
              service:
                name: frontend-staging
                port:
                  number: 80
          - path: /adminBookedList  # Error land path
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: staging
  name: backend-ingress-staging
  annotations:
    kubernetes.io/ingress.class: alb  # Use the AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing  # Internet-facing ALB
spec:
  rules:
    - host: api.wednesdayadventures.me  # Backend domain
      http:
        paths:
          - path: /  # Root path
            pathType: Prefix
            backend:
              service:
                name: backend-staging  # Backend Service name
                port:
                  number: 5000  # Backend Service port
          - path: /webhooks/stripe
            pathType: Prefix
            backend:
              service:
                name: backend-staging
                port:
                  number: 5000
